[package]
name = "mprisqueeze"
version = "0.1.9"
authors = ["Jean-Charles Quillet <jeancharles.quillet@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A command-line client for controlling squeezelite via MPRIS"
readme = "README.md"
homepage = "https://github.com/jecaro/mprisqueeze"
repository = "https://github.com/jecaro/mprisqueeze"
keywords = ["audio", "cli", "slimserver", "mpris", "squeezelite"]
categories = ["command-line-utilities", "multimedia::audio"]
exclude = [
    "flake.nix",
    "flake.lock",
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
nom = "8.0.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "io-util", "net", "macros", "process", "rt", "rt-multi-thread" ] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
