[package]
name = "mprisqueeze"
version = "0.1.11"
authors = ["Jean-Charles Quillet <jeancharles.quillet@gmail.com>"]
edition = "2024"
license = "MIT"
description = "A command-line client for controlling squeezelite via MPRIS"
readme = "README.md"
homepage = "https://github.com/jecaro/mprisqueeze"
repository = "https://github.com/jecaro/mprisqueeze"
keywords = ["audio", "cli", "slimserver", "mpris", "squeezelite"]
categories = ["command-line-utilities", "multimedia::audio"]
exclude = [
    "flake.nix",
    "flake.lock",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.32"
nom = "8.0.0"
reqwest = { version = "0.13.4", features = ["json", "rustls"], default-features = false }
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [ "io-util", "net", "macros", "process", "rt", "rt-multi-thread" ] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
